5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1593_2426.log
== TEST (2019-03-28 10:28:07) 
-- CODE:
t = float(input("tempo gasto: "))
v = float(input("velocidade media: "))

a=

d = v/t
a = t*12.0

print(d)
print(a)
-- ERROR:
File "XXXX", line 4
    a=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:28:12) 
-- CODE:
t = float(input("tempo gasto: "))
v = float(input("velocidade media: "))

d = v/t
a = t*12.0

print(d)
print(a)
-- OUTPUT:
11.11111111111111
108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:30:04) 
-- CODE:
t = float(input("tempo gasto: "))
v = float(input("velocidade media: "))

d = v*t
a = t*12

print(d)
print(a)
-- OUTPUT:
900.0
108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:30:47) 
-- CODE:
t = float(input("tempo gasto: "))
v = float(input("velocidade media: "))

d = v*t
a = d*12

print(d)
print(a)
-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:31:13) 
-- CODE:
t = float(input("tempo gasto: "))
v = float(input("velocidade media: "))

d = v*t
a = d/12

print(d)
print(a)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:31:25) 
-- CODE:
t = float(input("tempo gasto: "))
v = float(input("velocidade media: "))

d = v*t
a = d/12

print(d)
print(a)
-- EXECUTION TIME:
0.195914
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
